Remove redundant parentheses
- Use valueOf()